@@ -5,9 +5,14 @@
 extern "C" {
 #endif
 
+#include "Finalizer.h"
 #include "JailBreak.h"
 
 #define FILEEXTENSIONS ".zip"
+
+#define GAME_COUNT (6)
+
+extern const ArcadeGame allGames[GAME_COUNT];
 
 int loadSettings(void);
 void saveSettings(void);
