@@ -7,13 +7,13 @@ extern "C" {
 
 #include "Shared/ArcadeRoms.h"
 
-#define GAME_COUNT (3)
+#define JB_GAME_COUNT (3)
 
 extern const ArcadeRom jailbrekRoms[17];
 extern const ArcadeRom jailbrekbRoms[13];
 extern const ArcadeRom manhatanRoms[17];
 
-extern const ArcadeGame jailbrekGames[GAME_COUNT];
+extern const ArcadeGame jailbrekGames[JB_GAME_COUNT];
 
 /// This runs all save state functions for each chip.
 int packState(void *statePtr);
