@@ -159,6 +159,7 @@ static void setupGraphics() {
 				 | DISPLAY_SPR_ACTIVE
 				 | DISPLAY_BG0_ACTIVE
 				 | DISPLAY_BG1_ACTIVE
+				 | DISPLAY_BG2_ACTIVE
 				 | DISPLAY_WIN0_ON
 				 );
 	GFX_BG0CNT = BG_64x32 | BG_COLOR_16  | BG_MAP_BASE(0) | BG_TILE_BASE(2) | BG_PRIORITY(2);
