@@ -5,6 +5,7 @@ JailBreakDS revision history
 V0.3.7 - 2024-03-02 (FluBBa)
 	Added new debug menu.
 	Better menu traversing.
+	Added Finalizer.
 
 V0.3.6 - 2021-03-23 (FluBBa)
 	Added Jail Break Bootleg.
